# isis

./: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt
cmake/: Doxyfile.in
debian/: changelog  control  libisis-core-dev.install  libisis-core4.install  libisis-ioplugins-common.install  libisis-ioplugins-dicom.install  libisis-qt5-0.install  libisis-qt5-dev.install  python3-isis.install  rules
doxygen/: _formulas.tex  annotated.html  application_8cpp.html  application_8cpp_source.html  application_8hpp.html  application_8hpp_source.html  bytearray_8cpp.html  bytearray_8cpp_source.html  bytearray_8hpp.html  bytearray_8hpp_source.html  chunk_8cpp.html  chunk_8cpp_source.html  chunk_8hpp.html  chunk_8hpp_source.html  classes.html  classisis_1_1data_1_1ByteArray.html  classisis_1_1data_1_1Chunk.html  classisis_1_1data_1_1FilePtr.html  classisis_1_1data_1_1IOApplication.html  classisis_1_1data_1_1IOFactory.html  classisis_1_1data_1_1IOFactory_1_1io__error.html  classisis_1_1data_1_1Image.html  classisis_1_1data_1_1MemChunk.html  classisis_1_1data_1_1MemImage.html  classisis_1_1data_1_1NDimensional.html  classisis_1_1data_1_1TypedArray.html  classisis_1_1data_1_1TypedChunk.html  classisis_1_1data_1_1TypedImage.html  classisis_1_1data_1_1ValueArray.html  classisis_1_1data_1_1__internal_1_1ConstValueAdapter.html  classisis_1_1data_1_1__internal_1_1DelProxy.html  classisis_1_1data_1_1__internal_1_1FileHandle.html  classisis_1_1data_1_1__internal_1_1GenericValueIterator.html  classisis_1_1data_1_1__internal_1_1ImageIteratorTemplate.html  classisis_1_1data_1_1__internal_1_1TypedArrayIterator.html  classisis_1_1data_1_1__internal_1_1WritingValueAdapter.html  classisis_1_1image__io_1_1FileFormat.html  classisis_1_1util_1_1Application.html  classisis_1_1util_1_1ConsoleProgressBar.html  classisis_1_1util_1_1DefaultMsgPrint.html  (+256 more)
io_plugins/: CMakeLists.txt  imageFormat_Dicom.cpp  imageFormat_Dicom.hpp  imageFormat_DicomDictionary.cpp  imageFormat_DicomParser.cpp  imageFormat_ImageMagick.cpp  imageFormat_Null.cpp  imageFormat_Vista.cpp  imageFormat_Vista.hpp  imageFormat_ZISRAW.cpp  imageFormat_ZISRAW.hpp  imageFormat_ZISRAW_jxr.c  imageFormat_ZISRAW_jxr.h  imageFormat_compressed.cpp  imageFormat_compressed_lzma.hpp  imageFormat_fdf.cpp  imageFormat_flist.cpp  imageFormat_nifti_dcmstack.cpp  imageFormat_nifti_dcmstack.hpp  imageFormat_nifti_sa.cpp  imageFormat_nifti_sa.hpp  imageFormat_orthanc.cpp  imageFormat_png.cpp  imageFormat_tar.cpp  imageFormat_tiff_sa.cpp  imageFormat_tiff_sa.hpp  ioprotocol_FileDirectory.cpp  ioprotocol_FileDirectory.hpp  ioprotocol_FormatAdaptor.cpp  ioprotocol_FormatAdaptor.hpp
io_plugins/Vista_sa/: VistaParser.h  VistaParserbase.h  VistaScanner.h  VistaScannerbase.h  imageFormat_Vista_sa.cpp  imageFormat_Vista_sa.hpp  vistaprotoimage.cpp  vistaprotoimage.hpp
io_plugins/dicom/: imageFormat_Dicom.cpp  imageFormat_Dicom.hpp  imageFormat_DicomDictionary.cpp  imageFormat_DicomDictionary.hpp  imageFormat_DicomJ2k.cpp  imageFormat_DicomParser.cpp
io_plugins/sftp/: imageFormat_sftp.cpp  sftpclient.cpp  sftpclient.hpp
isis/: CMakeLists.txt  config.hpp  isis_cfg.cmake.in  isis_corecfg.cmake.in
isis/adapter/: CMakeLists.txt  isis_adaptercfg.cmake.in
isis/adapter/itk4/: common.hpp  common.hxx  isisitkimage.hpp  itkAdapter.hpp
isis/adapter/matlab/: CMakeLists.txt  common.cpp  common.hpp  image_transfer.cpp  image_transfer.hpp  load.cpp  property_transfer.cpp  property_transfer.hpp
isis/adapter/python/: CMakeLists.txt  chunk_python.cpp  isis_python.cpp  logging.cpp  logging.hpp  utils.cpp  utils.hpp
isis/adapter/qt5/: common.cpp  common.hpp  display.hpp  gradientwidget.hpp  guiprogressfeedback.cpp  guiprogressfeedback.hpp  qdefaultmessageprint.cpp  qdefaultmessageprint.hpp  qimage_adapter.cpp  qimage_adapter.hpp  qimage_loader.cpp  qimage_loader.hpp  qlogstore.cpp  qlogstore.hpp  qlogwidget.cpp  qlogwidget.hpp  qlogwidget.ui  qmatrixconversion.hpp  qtapplication.cpp  qtapplication.hpp  qvariant_adapter.cpp  qvariant_adapter.hpp  simpleimageview.cpp  simpleimageview.hpp
isis/core/: CMakeLists.txt  application.cpp  application.hpp  arraytypes.hpp  bytearray.cpp  bytearray.hpp  chunk.cpp  chunk.hpp  color.hpp  common.cpp  common.hpp  console_progress_bar.cpp  console_progress_bar.hpp  endianess.hpp  fileptr.cpp  fileptr.hpp  generic_value.hpp  image.cpp  image.hpp  image_iterator.cpp  image_iterator.hpp  io_application.cpp  io_application.hpp  io_factory.cpp  io_factory.hpp  io_interface.cpp  io_interface.h  io_pluginhandler.cpp  io_pluginhandler.hpp  io_protocol.cpp  io_protocol.hpp  isis_corecfg.cmake.in  istring.cpp  istring.hpp  log.hpp  log_modules.hpp  matrix.hpp  message.cpp  message.hpp  ndimensional.hpp  (+44 more)
isis/math/: CMakeLists.txt  binarise.hpp  common.hpp  fft.cpp  fft.hpp  histogram.cpp  histogram.hpp  transform.cpp  transform.hpp
isis/math/details/: clfft.cpp  clfft.hxx  details_fft.cpp  details_fft.hxx  fftw.cpp  fftw.hxx
isis/math/details/opencl/: clplatform.cpp  clplatform.hxx
isis/math/gsl/: fft.cpp  fft.hxx
tests/: CMakeLists.txt  test_parameter.cpp
tests/ExternalLibraryAdapter/: CMakeLists.txt
tests/adapter/: CMakeLists.txt  qt5test.cpp
tests/benchmarks/: CMakeLists.txt  byteswapStresstest.cpp  chunkVoxelStressTest.cpp  fftStresstest.cpp  imageStresstest.cpp  swapDimStresstest.cpp  typedIteratorStresstest.cpp  valueArrayStresstest.cpp  valueIteratorStresstest.cpp  vectorStresstest.cpp
tests/data/: CMakeLists.txt  chunkTest.cpp  filePtrTest.cpp  imageListTest.cpp  imageTest.cpp  sortedchunklistTest.cpp  valueArrayTest.cpp
tests/extRegistration/: CMakeLists.txt
tests/io/: CMakeLists.txt  imageIONiiTest.cpp  imageIONullTest.cpp  imageIOTest.cpp  imageIOVistaTest.cpp
tests/math/: CMakeLists.txt  fftTest.cpp
tests/util/: CMakeLists.txt  commonTest.cpp  istringTest.cpp  propMapTest.cpp  propertyTest.cpp  selectionTest.cpp  singletonTest.cpp  valueTest.cpp  vectorTest.cpp
tools/: CMakeLists.txt  isiscalc.cpp  isisdiff.cpp  isisdump.cpp  isisflip.cpp  isisgauss.cpp  isisraw.cpp  isisstat.cpp  isistransform.cpp  (+2 more)
(+1 files in other folders)
